updating author info
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk@18757 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/sumo/AUTHORS
+++ b/sumo/AUTHORS
@@ -50,3 +50,9 @@ Eric Melde <> melde
 Evamarie Wiessner
 Andreas Kendziorra <> kend-an
 Robert Hilbrich <> rhilbrich
+Thomas Lockhart <Thomas.G.Lockhart@jpl.nasa.gov>
+Gerald Richter
+Lukas Grohmann
+Tamas Kurczveil
+Pablo Alvarez Lopez
+
