mail adresses, refs #2
git-svn-id: http://svn.code.sf.net/p/sumo/code/trunk@18847 29f149b2-0c63-11e1-8f5c-a347f6a9acd0

--- a/sumo/AUTHORS
+++ b/sumo/AUTHORS
@@ -51,8 +51,8 @@ Evamarie Wiessner
 Andreas Kendziorra <> kend-an
 Robert Hilbrich <> rhilbrich
 Thomas Lockhart <Thomas.G.Lockhart@jpl.nasa.gov>
-Gerald Richter
-Lukas Grohmann
+Gerald Richter <Gerald.Richter@ait.ac.at> ait-mob-dts
+Lukas Grohmann <Lukas.Grohmann@ait.ac.at>
 Tamas Kurczveil
 Pablo Alvarez Lopez
 
